# pikpak_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapitools.json
.github/: dependabot.yml
.github/workflows/: ci.yml
downloader/: Cargo.toml
downloader/src/: chunk.rs  downloader.rs  error.rs  lib.rs  limiter.rs  status_tracker.rs  worker.rs
pikpak_core/: Cargo.toml
pikpak_core/src/: consts.rs  error.rs  lib.rs
pikpak_core/src/api/: download.rs  download_pause.rs  download_remove.rs  download_resume.rs  login.rs  mget_download_status.rs  mod.rs  remote_list.rs  token.rs
pikpak_core/src/core/: auth.rs  download.rs  downloader.rs  file.rs  folder.rs  mod.rs  token.rs
pikpak_core/src/extension/: api_option.rs  auto_recycle_store.rs  encrypted_persistent_store.rs  encrypted_recycle_persistent_store.rs  expire_store.rs  mod.rs
pikpak_core/src/store/: download_status_store.rs  mod.rs  pikpak_file_id_cache.rs
pikpak_core/src/utils/: mod.rs  path.rs  secret.rs
pikpak_web/: Cargo.toml
pikpak_web/src/: lib.rs  main.rs
pikpak_web/src/handlers/: download_remove.rs  login.rs  mget_download_status.rs
pikpak_web/src/utils/: token.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  openapi_doc.rs
server/src/extension/: auth.rs
server/src/handlers/: download_begin.rs  download_pause.rs  download_remove.rs  download_resume.rs  login.rs  mget_download_status.rs  mod.rs  remote_list.rs
server/src/utils/: jwt.rs  token.rs
website/: README.md  auto-imports.d.ts  components.d.ts  index.html  jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.js  vite.config.ts
website/src/: App.vue  main.js  main.ts
website/src/api/: api.ts  base.ts  common.ts  configuration.ts  index.ts  runtime.ts
website/src/api/apis/: LoginApi.ts  index.ts
website/src/api/models/: BaseResp.ts  LoginReq.ts  LoginResp.ts  index.ts
website/src/assets/: main.css
website/src/components/: LoginModal.vue  MainAside.vue  MainHeader.vue
website/src/components/main/: FileDownloaded.vue  FileDownloading.vue  FileList.vue
website/src/router/: index.ts
website/src/services/: download_begin.ts  download_remove.ts  download_resume.ts  login.ts  mget_download_status.ts  pause_download.ts  remote_list.ts  wrapper.ts
website/src/stores/: backend_url.ts  jwt.ts  token.ts
website/src/utils/: handle_error.ts
website/src/views/: LoginView.vue  LoginView1.vue  MainView.vue
