[workspace]
resolver = "2"
members = [ "downloader","pikpak_core", "server"]

[workspace.package]
edition = "2021"
authors = ["booiris <booiris02@gmail.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
anyhow = "1.0"
humantime = "2.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "catch-panic"] }
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "674d0b997db6cc6345249332a714342bd8a75bd7", features = [
    "axum_extras",
] }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", rev = "674d0b997db6cc6345249332a714342bd8a75bd7", features = [
    "axum",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
rand = "0.8"
ring = "0.17"
chrono = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1.0"
md5 = "0.7"
oauth2 = "4.4"
ahash = { version = "0.8", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = "9.3"
path-clean = "1.0"
env_logger = "0.11"
ctor = "0.2"
dotenv_codegen = "0.15"
bincode = "1.3"

[workspace.lints.rust]
unsafe_code = "forbid"
