[workspace]
resolver = "2"
members = ["pikpak_core", "server"]

[workspace.package]
edition = "2021"
authors = ["booiris <booiris02@gmail.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
anyhow = "1.0"
humantime = "2.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "catch-panic"] }
utoipa = "=5.0.0-alpha.0"
utoipa-swagger-ui = "=7.1.1-alpha.0"
humansize = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
rand = "0.8"
ring = "0.17"
chrono = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1.0"
md5 = "0.7"
oauth2 = "4.4"
ahash = { version = "0.8", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = "9.3"
path-clean = "1.0"
env_logger = "0.11"
ctor = "0.2"
dotenv_codegen = "0.15"
bincode = "1.3"
derive_builder = "0.20"
http = "1.1"
tokio-util = "0.7"
futures-util = "0.3"
headers = "0.4"
bytes = "1.6"
atomic_float = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
