[workspace]
resolver = "2"
members = ["pikpak_core", "pikpak_web"]

[workspace.package]
edition = "2021"
authors = ["booiris <booiris02@gmail.com>"]
license = "MIT"

[workspace.dependencies]
tokio = "1"
anyhow = "1.0"
humantime = "2.1"
axum = "0.7"
tower = "0.5"
tower-http = "0.5"
utoipa = "=5.0.0-alpha.0"
utoipa-swagger-ui = "=7.1.1-alpha.0"
humansize = "2.1"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
rand = "0.8"
ring = "0.17"
chrono = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false }
thiserror = "1.0"
md5 = "0.7"
oauth2 = "4.4"
ahash = "0.8"
base64 = "0.22"
jsonwebtoken = "9.3"
path-clean = "1.0"
ctor = "0.2"
dotenvy_macro = "0.15"
bincode = "1.3"
derive_builder = "0.20"
http = "1.1"
tokio-util = "0.7"
futures-util = "0.3"
headers = "0.4"
bytes = "1.6"
atomic_float = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
tracing-appender = "0.2"
color-eyre = "0.6"
pikpak_core = { path = "pikpak_core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
