[package]
name = "pikpak_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
md5 = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true, features = ["serde"] }
ahash = { workspace = true }
lazy_static = { workspace = true }
path-clean = { workspace = true }
bincode = { workspace = true }
ring = { workspace = true }
downloader = { path = "../downloader" }
tokio-util = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
ctor = { workspace = true }
dotenv_codegen = { workspace = true }

[lints]
workspace = true

[features]
__local_test = []
