[package]
name = "pikpak_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "stream",
    "rustls-tls",
    "http2",
    "charset"
] }
serde = { workspace = true, features = ["rc", "derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
md5 = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true, features = ["serde"] }
ahash = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
path-clean = { workspace = true }
bincode = { workspace = true }
ring = { workspace = true }
tokio-util = { workspace = true }
humansize = { workspace = true }
futures-util = { workspace = true }
atomic_float = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
dotenvy_macro = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-error = { workspace = true }

[lints]
workspace = true

[features]
default = []
__local_test = []
