[package]
name = "pikpak_web"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
anyhow = { workspace = true }
humantime = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "cors",
    "catch-panic",
    "fs",
    "trace"
] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
pikpak_core = { workspace = true }
dotenv_codegen = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-error = { workspace = true }
tracing-appender = { workspace = true }
color-eyre = { workspace = true }

[features]
__local_test = []
utoipa = ["utoipa-swagger-ui"]

[lints]
workspace = true
